# minsubsystems

./: CMakeLists.txt  README.md
cmake/: compiler_definitions.cmake  constants.cmake  func_macro.cmake  options.cmake
prj.min/: CMakeLists.txt
prj.min/minimgapi/: CMakeLists.txt  changelog.txt  imgguard.hpp  license.txt  minimgapi-helpers.hpp  minimgapi-inl.h  minimgapi.h
prj.min/minimgapi/doc/: license.txt  minimgapi.dox
prj.min/minimgapi/src/: bitcpy.h  copy_channels.cpp  minimgapi.cpp  resample.cpp  test_minimgapi.cpp  transpose.cpp
prj.min/minimgapi/src/vector/: copy_channels-inl.h  transpose-inl.h
prj.min/minimgapi/src/vector/neon/: copy_channels-inl.h  transpose-inl.h
prj.min/minimgapi/src/vector/sse/: copy_channels-inl.h  transpose-inl.h
prj.min/minimgio/: CMakeLists.txt  contrib.h  define.h  device.h  license.txt  minimgio.h
prj.min/minimgio/doc/: license.txt  minimgio.dox
prj.min/minimgio/src/: avfoundationdevice.h  avfoundationdevice.mm  avfoundationsubsystem.h  avfoundationsubsystem.mm  avfoundationutils.h  camstream.cpp  camstream.h  contrib.cpp  device.cpp  dshowdevice.cpp  dshowdevice.h  dshowsubsystem.cpp  dshowsubsystem.h  dshowutils.cpp  dshowutils.h  minimgio.cpp  minimgiodev_go.cpp  minimgiodevice.cpp  minimgiodevice.h  minimgiojpeg.cpp  minimgiojpeg.h  minimgiolst.cpp  minimgiolst.h  minimgiopng.cpp  minimgiopng.h  minimgiotiff.cpp  minimgiotiff.h  minimgiowebp.cpp  minimgiowebp.h  pack.cpp  pack.h  stream.h  subsystem.cpp  subsystem.h  utils.cpp  utils.h
prj.min/minutils/: CMakeLists.txt  crossplat.h  license.txt  lifetime.h  listfile.h  mathoper.h  minarr.h  minband.h  minerr.h  mingeo.h  minhelpers.h  minimg.h  minlog.h  minpoint.h  minquad.h  minrect.h  minsegm.h  minsize.h  mintyp.h  pathname.h  projective.h  projective_rect.h  report.h  residuals.h  smartptr.h  stdint-doc.h  string_scanner.hpp  timeprofile.h  timer.h
prj.min/minutils/doc/: minutils.dox
prj.min/minutils/src/: minutils.cpp
prj.thirdparty/: CMakeLists.txt
prj.thirdparty/gtest/: CMakeLists.txt  revision
prj.thirdparty/json-cpp/: CMakeLists.txt
prj.thirdparty/libtiff/: CMakeLists.txt  tiffiop.h
prj.thirdparty/libwebp/: CMakeLists.txt
prj.thirdparty/libwebp/dsp/: dsp.h
prj.thirdparty/zlib/: CMakeLists.txt
